# jaxonmodels

./: .gitignore  .pre-commit-config.yaml  README.md  autoencoder.py  convnext_experiments.py  main.py  main2.py  main3.py  main4.py  pyproject.toml  sam_test.py  swin_transformer_jax_results.json  swin_transformer_results.json  test.ipynb  test1.py  test_clip.py  testing_ground.py  testing_ground2.py  testing_ground4.py  vqvae.py
.github/workflows/: lint_check.yml  test.yml
examples/: alexnet_inference.py  autoencoder.py  clip_inference.py  convnext_inference.py  efficientnet_inference.py  esm.py  esm_example_fold_protein.py  examples.requirements.txt  resnet_inference.py  sharding_playground.py  swin_transformer_inference.py  text_diffusion.py  train_lstm.py  train_resnet.py  train_rnn.py  training_resnet.py  training_resnet_torch.py  training_simple_vit.py  vqvae.py
jaxonmodels/: __init__.py  layers.py
jaxonmodels/commons/: utils.py
jaxonmodels/functions/: __init__.py  attention.py  functions.py  initialization.py  masking.py  normalization.py  regularization.py  state_space.py  text.py  utils.py
jaxonmodels/layers/: __init__.py  abstract.py  attention.py  batch_norm.py  blocks.py  convolution.py  head.py  local_response_normalisation.py  mha.py  multi_head_attention.py  normalization.py  regularization.py  rope_embeddings.py  selective_state_space_models.py  sequential.py  state_space.py
jaxonmodels/models/: alexnet.py  clip.py  convnext.py  efficientnet.py  esm.py  esmc.py  mamba.py  resnet.py  siglip.py  swin_transformer.py  vit.py
jaxonmodels/rnns/: rnn.py
jaxonmodels/ssm/mamba/: mamba.py  model_args.py
jaxonmodels/statedict2pytree/: model_orders.py  s2p.py
jaxonmodels/tokenizers/esm/: tokenizers.py
jaxonmodels/transformers/kira/: __init__.py  generate.py  kira.py  model_args.py  train.py
jaxonmodels/transformers/kira/models/kira/: kira.py
jaxonmodels/transformers/llama/: llama2.py  llama3.py  model_args.py  tokenizer.py
jaxonmodels/urls/: resnet.py
jaxonmodels/utils/: boto_client.py
jaxonmodels/vision/: __init__.py  resnet.py  vgg.py
tests/: test_attention.py  test_batch_norm.py  test_convnext_layers.py  test_efficientnet_layers.py  test_esm_affine.py  test_esm_layers.py  test_layernorm.py  test_local_response_normalisation.py  test_mha.py  test_multi_head_attention_forward.py  test_s2p.py  test_siglip.py  test_swin_layers.py
