[project]
name = "jaxonmodels"
version = "0.1.10"
description = "JAX models for deep learning"
readme = "README.md"
requires-python = "~=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Artur A. Galstyan", email = "mail@arturgalstyan.dev" }]
dependencies = [
    "jax",
    "equinox",
    "jaxlib",
    "tqdm",
    "beartype",
    "typing_extensions",
    "loguru",
    "matplotlib",
    "optax",
    "jaxonloader",
    "fire",
    "wandb",
    "jaxtyping",
    "sentencepiece",
    "boto3",
    "boto3-stubs",
]
[project.optional-dependencies]
dev = ["nox", "pre-commit", "pytest", "mkdocs"]


[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]


[tool.pyright]
reportIncompatibleMethodOverride = true
reportMissingImports = false


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
