[project]
name = "jaxonmodels"
version = "0.5.3"
description = "JAX models for deep learning in Equinox"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Artur A. Galstyan", email = "mail@arturgalstyan.dev" }]
dependencies = [
    "jax",
    "equinox",
    "pydantic",
    "numpy",
    "jaxlib",
    "tqdm",
    "beartype",
    "typing_extensions",
    "loguru",
    "optax",
    "jaxtyping",
    "pytest",
    "ftfy",
    "regex",
    "statedict2pytree",
    "jaxonlayers"
]
[project.optional-dependencies]
dev = ["pre-commit", "pytest", "mkdocs", "vulture"]
examples = ["tensorflow-cpu", "tensorflow_datasets", "clu", "requests"]
tests = ["torch", "torchvision", "esm>=3.2.3"]
esm = ["tokenizers", "huggingface_hub", "transformers"]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722", "F821"]
select = ["E", "F", "I001"]


[tool.pyright]
reportIncompatibleMethodOverride = true
reportMissingImports = false


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ty>=0.0.15",
    "ruff>=0.15.0",
]
